// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/checkbox/demo/basic.md correctly 1`] = `
<span
  class="ant-checkbox-wrapper"
>
  <span
    class="ant-checkbox"
  >
    <input
      class="ant-checkbox-input"
      type="checkbox"
    />
    <span
      class="ant-checkbox-inner"
    />
  </span>
  <span>
    Checkbox
  </span>
</span>
`;

exports[`renders ./components/checkbox/demo/check-all.md correctly 1`] = `
<div>
  <div
    style="border-bottom:1px solid #E9E9E9"
  >
    <span
      class="ant-checkbox-wrapper"
    >
      <span
        class="ant-checkbox ant-checkbox-indeterminate"
      >
        <input
          class="ant-checkbox-input"
          type="checkbox"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        Check all
      </span>
    </span>
  </div>
  <br />
  <div
    class="ant-checkbox-group"
  >
    <span
      class="ant-checkbox-group-item ant-checkbox-wrapper ant-checkbox-wrapper-checked"
    >
      <span
        class="ant-checkbox ant-checkbox-checked"
      >
        <input
          checked=""
          class="ant-checkbox-input"
          type="checkbox"
          value="Apple"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </span>
    <span
      class="ant-checkbox-group-item ant-checkbox-wrapper"
    >
      <span
        class="ant-checkbox"
      >
        <input
          class="ant-checkbox-input"
          type="checkbox"
          value="Pear"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </span>
    <span
      class="ant-checkbox-group-item ant-checkbox-wrapper ant-checkbox-wrapper-checked"
    >
      <span
        class="ant-checkbox ant-checkbox-checked"
      >
        <input
          checked=""
          class="ant-checkbox-input"
          type="checkbox"
          value="Orange"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </span>
  </div>
</div>
`;

exports[`renders ./components/checkbox/demo/controller.md correctly 1`] = `
<div>
  <p
    style="margin-bottom:20px"
  >
    <span
      class="ant-checkbox-wrapper ant-checkbox-wrapper-checked"
    >
      <span
        class="ant-checkbox ant-checkbox-checked"
      >
        <input
          checked=""
          class="ant-checkbox-input"
          type="checkbox"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        Checked-Enabled
      </span>
    </span>
  </p>
  <p>
    <button
      class="ant-btn ant-btn-primary ant-btn-sm"
      type="button"
    >
      <span>
        Uncheck
      </span>
    </button>
    <button
      class="ant-btn ant-btn-primary ant-btn-sm"
      style="margin-left:10px"
      type="button"
    >
      <span>
        Disable
      </span>
    </button>
  </p>
</div>
`;

exports[`renders ./components/checkbox/demo/disabled.md correctly 1`] = `
<div>
  <span
    class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled"
  >
    <span
      class="ant-checkbox ant-checkbox-disabled"
    >
      <input
        class="ant-checkbox-input"
        disabled=""
        type="checkbox"
      />
      <span
        class="ant-checkbox-inner"
      />
    </span>
  </span>
  <br />
  <span
    class="ant-checkbox-wrapper ant-checkbox-wrapper-disabled"
  >
    <span
      class="ant-checkbox ant-checkbox-checked ant-checkbox-disabled"
    >
      <input
        checked=""
        class="ant-checkbox-input"
        disabled=""
        type="checkbox"
      />
      <span
        class="ant-checkbox-inner"
      />
    </span>
  </span>
</div>
`;

exports[`renders ./components/checkbox/demo/group.md correctly 1`] = `
<div>
  <div
    class="ant-checkbox-group"
  >
    <span
      class="ant-checkbox-group-item ant-checkbox-wrapper ant-checkbox-wrapper-checked"
    >
      <span
        class="ant-checkbox ant-checkbox-checked"
      >
        <input
          checked=""
          class="ant-checkbox-input"
          type="checkbox"
          value="Apple"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </span>
    <span
      class="ant-checkbox-group-item ant-checkbox-wrapper"
    >
      <span
        class="ant-checkbox"
      >
        <input
          class="ant-checkbox-input"
          type="checkbox"
          value="Pear"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </span>
    <span
      class="ant-checkbox-group-item ant-checkbox-wrapper"
    >
      <span
        class="ant-checkbox"
      >
        <input
          class="ant-checkbox-input"
          type="checkbox"
          value="Orange"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </span>
  </div>
  <br />
  <br />
  <div
    class="ant-checkbox-group"
  >
    <span
      class="ant-checkbox-group-item ant-checkbox-wrapper"
    >
      <span
        class="ant-checkbox"
      >
        <input
          class="ant-checkbox-input"
          type="checkbox"
          value="Apple"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </span>
    <span
      class="ant-checkbox-group-item ant-checkbox-wrapper ant-checkbox-wrapper-checked"
    >
      <span
        class="ant-checkbox ant-checkbox-checked"
      >
        <input
          checked=""
          class="ant-checkbox-input"
          type="checkbox"
          value="Pear"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </span>
    <span
      class="ant-checkbox-group-item ant-checkbox-wrapper"
    >
      <span
        class="ant-checkbox"
      >
        <input
          class="ant-checkbox-input"
          type="checkbox"
          value="Orange"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </span>
  </div>
  <br />
  <br />
  <div
    class="ant-checkbox-group"
  >
    <span
      class="ant-checkbox-group-item ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-wrapper-disabled"
    >
      <span
        class="ant-checkbox ant-checkbox-checked ant-checkbox-disabled"
      >
        <input
          checked=""
          class="ant-checkbox-input"
          disabled=""
          type="checkbox"
          value="Apple"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </span>
    <span
      class="ant-checkbox-group-item ant-checkbox-wrapper ant-checkbox-wrapper-disabled"
    >
      <span
        class="ant-checkbox ant-checkbox-disabled"
      >
        <input
          class="ant-checkbox-input"
          disabled=""
          type="checkbox"
          value="Pear"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </span>
    <span
      class="ant-checkbox-group-item ant-checkbox-wrapper ant-checkbox-wrapper-disabled"
    >
      <span
        class="ant-checkbox ant-checkbox-disabled"
      >
        <input
          class="ant-checkbox-input"
          disabled=""
          type="checkbox"
          value="Orange"
        />
        <span
          class="ant-checkbox-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </span>
  </div>
</div>
`;

exports[`renders ./components/checkbox/demo/layout.md correctly 1`] = `
<div
  class="ant-checkbox-group"
  style="width:100%"
>
  <div
    class="ant-row"
  >
    <div
      class="ant-col ant-col-8"
    >
      <span
        class="ant-checkbox-wrapper"
      >
        <span
          class="ant-checkbox"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
            value="A"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
        <span>
          A
        </span>
      </span>
    </div>
    <div
      class="ant-col ant-col-8"
    >
      <span
        class="ant-checkbox-wrapper"
      >
        <span
          class="ant-checkbox"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
            value="B"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
        <span>
          B
        </span>
      </span>
    </div>
    <div
      class="ant-col ant-col-8"
    >
      <span
        class="ant-checkbox-wrapper"
      >
        <span
          class="ant-checkbox"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
            value="C"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
        <span>
          C
        </span>
      </span>
    </div>
    <div
      class="ant-col ant-col-8"
    >
      <span
        class="ant-checkbox-wrapper"
      >
        <span
          class="ant-checkbox"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
            value="D"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
        <span>
          D
        </span>
      </span>
    </div>
    <div
      class="ant-col ant-col-8"
    >
      <span
        class="ant-checkbox-wrapper"
      >
        <span
          class="ant-checkbox"
        >
          <input
            class="ant-checkbox-input"
            type="checkbox"
            value="E"
          />
          <span
            class="ant-checkbox-inner"
          />
        </span>
        <span>
          E
        </span>
      </span>
    </div>
  </div>
</div>
`;
